[gd_scene load_steps=47 format=3 uid="uid://b2a31xnvry6r1"]

[ext_resource type="Script" path="res://scripts/modules/player/npc_2.gd" id="1_08s4a"]
[ext_resource type="Texture2D" uid="uid://hqdavyunyd7e" path="res://assets/sprites/npc/npc2.png" id="2_6w1w1"]
[ext_resource type="Texture2D" uid="uid://dwxlif2i2u5ru" path="res://assets/sprites/npc/npc.png" id="3_2rofc"]
[ext_resource type="AudioStream" uid="uid://ttiw5wfipt7v" path="res://assets/sounds/checkpoints/teleport.wav" id="4_yd7cf"]
[ext_resource type="Texture2D" uid="uid://7odyjq8hrrs" path="res://assets/sprites/enemy/achase/Idle.png" id="5_amm1t"]
[ext_resource type="Texture2D" uid="uid://dwon3ombh26jc" path="res://assets/sprites/enemy/achase/Attack.png" id="6_pg0lk"]
[ext_resource type="AudioStream" uid="uid://bf6bkyn0up2y4" path="res://assets/sounds/traps/LASRGun_Lazer Zap 04_PSE_CLACK_90gyP.wav" id="7_2ih8j"]
[ext_resource type="PackedScene" uid="uid://yan3jqnet7ud" path="res://scenes/modules/checkpoints/empty-teleport.tscn" id="7_lmxhe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nf51p"]
atlas = ExtResource("2_6w1w1")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul6s0"]
atlas = ExtResource("2_6w1w1")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulhnt"]
atlas = ExtResource("2_6w1w1")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hgtd"]
atlas = ExtResource("2_6w1w1")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxxtk"]
atlas = ExtResource("3_2rofc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhcnm"]
atlas = ExtResource("3_2rofc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gokr"]
atlas = ExtResource("3_2rofc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6m6v"]
atlas = ExtResource("3_2rofc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d8xu"]
atlas = ExtResource("3_2rofc")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qg18"]
atlas = ExtResource("3_2rofc")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr0on"]
atlas = ExtResource("3_2rofc")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmnnu"]
atlas = ExtResource("3_2rofc")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_spw7t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf51p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul6s0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulhnt")
}, {
"duration": 100.0,
"texture": SubResource("AtlasTexture_7hgtd")
}],
"loop": false,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxxtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhcnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gokr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6m6v")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d8xu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qg18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr0on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmnnu")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2kjh"]
size = Vector2(34, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_elahi"]
atlas = ExtResource("5_amm1t")
region = Rect2(0, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bqlq"]
atlas = ExtResource("5_amm1t")
region = Rect2(140, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcuhc"]
atlas = ExtResource("5_amm1t")
region = Rect2(280, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2bdf"]
atlas = ExtResource("5_amm1t")
region = Rect2(420, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_udb2p"]
atlas = ExtResource("5_amm1t")
region = Rect2(560, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_yujtk"]
atlas = ExtResource("5_amm1t")
region = Rect2(700, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_8itog"]
atlas = ExtResource("5_amm1t")
region = Rect2(840, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_1eeeh"]
atlas = ExtResource("5_amm1t")
region = Rect2(980, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_67wny"]
atlas = ExtResource("5_amm1t")
region = Rect2(1120, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_apm1x"]
atlas = ExtResource("5_amm1t")
region = Rect2(1260, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjdr7"]
atlas = ExtResource("6_pg0lk")
region = Rect2(0, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_b72ye"]
atlas = ExtResource("6_pg0lk")
region = Rect2(140, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntasm"]
atlas = ExtResource("6_pg0lk")
region = Rect2(280, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_mplko"]
atlas = ExtResource("6_pg0lk")
region = Rect2(420, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymqkc"]
atlas = ExtResource("6_pg0lk")
region = Rect2(560, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hyly"]
atlas = ExtResource("6_pg0lk")
region = Rect2(700, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdbgv"]
atlas = ExtResource("6_pg0lk")
region = Rect2(840, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pxxr"]
atlas = ExtResource("6_pg0lk")
region = Rect2(980, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsdx1"]
atlas = ExtResource("6_pg0lk")
region = Rect2(1120, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1i77"]
atlas = ExtResource("6_pg0lk")
region = Rect2(1260, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg71h"]
atlas = ExtResource("6_pg0lk")
region = Rect2(1400, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_elqb0"]
atlas = ExtResource("6_pg0lk")
region = Rect2(1540, 0, 140, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_cegnj"]
atlas = ExtResource("6_pg0lk")
region = Rect2(1680, 0, 140, 140)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ynb3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_elahi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bqlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcuhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2bdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udb2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yujtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8itog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1eeeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67wny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apm1x")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjdr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b72ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntasm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mplko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymqkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hyly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdbgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pxxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsdx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1i77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg71h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elqb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cegnj")
}],
"loop": false,
"name": &"shoot",
"speed": 7.0
}]

[node name="Npc" type="CharacterBody2D" groups=["teleport_enable"]]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_08s4a")
shoot_delay = null
bubble_speed = null
bubble_title = null
bubble_index = null
disappear_delay = null
next_scene_file_path = null
transition_scene = null
teleport_type = null

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_spw7t")
animation = &"death"
autoplay = "idle"
frame = 3
frame_progress = 1.0
flip_h = true

[node name="detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
position = Vector2(-36, 3)
shape = SubResource("RectangleShape2D_a2kjh")

[node name="teleport_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_yd7cf")

[node name="boss" type="AnimatedSprite2D" parent="."]
position = Vector2(170, -13)
sprite_frames = SubResource("SpriteFrames_3ynb3")
animation = &"shoot"
autoplay = "idle"
frame = 12
frame_progress = 1.0
flip_h = true

[node name="shoot_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_2ih8j")

[node name="teleport" parent="." instance=ExtResource("7_lmxhe")]
position = Vector2(-6, 3)

[node name="teleport2" parent="." instance=ExtResource("7_lmxhe")]
position = Vector2(-39, 1)
